<?xml version="1.0" encoding="UTF-8"?>
<!--
BSD 3-Clause License

Copyright (c), 2023 Indiana University
All rights reserved.

Redistribution and use in source and binary forms, with or without
modification, are permitted provided that the following conditions are met:

* Redistributions of source code must retain the above copyright notice, this
  list of conditions and the following disclaimer.

* Redistributions in binary form must reproduce the above copyright notice,
  this list of conditions and the following disclaimer in the documentation
  and/or other materials provided with the distribution.

* Neither the name of the copyright holder nor the names of its
  contributors may be used to endorse or promote products derived from
  this software without specific prior written permission.

THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
-->
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>edu.iu.util</groupId>
	<artifactId>iu-java-parent</artifactId>
	<version>7.0.7-SNAPSHOT</version>

	<packaging>pom</packaging>
	<name>IU Java Utilities Parent POM</name>
	<inceptionYear>2022</inceptionYear>

	<licenses>
		<license>
			<name>BSD-3-Clause</name>
			<url>https://github.iu.edu/iu-uits-es/iu-java-util/blob/develop/LICENSE</url>
			<distribution>repo</distribution>
			<comments>Copyright (c) 2024 Indiana Univeristy</comments>
		</license>
	</licenses>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<argLine>-ea --add-modules ALL-MODULE-PATH -XX:+EnableDynamicAgentLoading</argLine>

		<iu-java-util.version>7.0.7-SNAPSHOT</iu-java-util.version>

		<jakarta.annotation-api.version>3.0.0</jakarta.annotation-api.version>
		<jakarta.interceptor-api.version>2.2.0</jakarta.interceptor-api.version>
		<jakarta.json-api.version>2.1.2</jakarta.json-api.version>
		<jakarta.json.bind-api.version>3.0.0</jakarta.json.bind-api.version>
		
		<parsson.version>1.1.7</parsson.version>
		<java-jwt.version>4.4.0</java-jwt.version>
		<jsoup.version>1.17.2</jsoup.version>

		<junit-jupiter.version>5.10.0</junit-jupiter.version>
		<junit-platform.version>1.10.0</junit-platform.version>
		<mockito.version>5.5.0</mockito.version>
	</properties>

	<distributionManagement>
		<repository>
			<id>IUMaven</id>
			<url>https://apps.iu.edu/nxs-prd/content/repositories/IUPublic</url>
		</repository>
		<snapshotRepository>
			<id>IUMaven</id>
			<url>https://apps.iu.edu/nxs-prd/content/repositories/IUPublic-Snapshot</url>
		</snapshotRepository>
	</distributionManagement>

	<repositories>
		<repository>
			<id>Jakarta</id>
			<url>https://jakarta.oss.sonatype.org/content/repositories/releases</url>
		</repository>
	</repositories>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<reportSets>
					<reportSet>
						<reports>
							<report>report</report>
						</reports>
					</reportSet>
				</reportSets>
			</plugin>
		</plugins>
	</reporting>

	<build>
		<resources>
			<resource>
				<directory>src/main/resources</directory>
				<filtering>true</filtering>
			</resource>
		</resources>

		<testResources>
			<testResource>
				<directory>src/test/resources</directory>
				<filtering>true</filtering>
			</testResource>
		</testResources>

		<plugins>
			<plugin>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.2.1</version>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireJavaVersion>
									<version>21</version>
								</requireJavaVersion>
								<requireMavenVersion>
									<version>3.9</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-source-plugin</artifactId>
			</plugin>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-resources-plugin</artifactId>
					<version>3.3.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>3.2.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-failsafe-plugin</artifactId>
					<version>3.2.2</version>
					<executions>
						<execution>
							<goals>
								<goal>integration-test</goal>
								<goal>verify</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>3.6.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-ear-plugin</artifactId>
					<version>3.3.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.3.0</version>
					<configuration>
						<archive>
							<manifest>
								<addExtensions>true</addExtensions>
								<classpathPrefix>META-INF/lib</classpathPrefix>
							</manifest>
							<manifestEntries>
								<Sealed>true</Sealed>
							</manifestEntries>
						</archive>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-war-plugin</artifactId>
					<version>3.3.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-dependency-plugin</artifactId>
					<version>3.6.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.11.0</version>
					<configuration>
						<release>17</release>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-source-plugin</artifactId>
					<version>3.2.1</version>
					<executions>
						<execution>
							<id>default-source-jar</id>
							<phase>process-classes</phase>
							<goals>
								<goal>jar-no-fork</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>3.5.0</version>
					<configuration>
						<windowtitle>${project.name} ${project.version}</windowtitle>
						<doctitle>${project.name}</doctitle>
						<top><![CDATA[
					<header class="rvt-header-wrapper">
					  <div class="rvt-header-global">
					    <div class="rvt-container-xl">
					      <div class="rvt-header-global__inner">
					        <div class="rvt-header-global__logo-slot">
					          <span class="rvt-lockup">  
					            <div class="rvt-lockup__tab">
					              <svg xmlns="http://www.w3.org/2000/svg" class="rvt-lockup__trident" viewBox="0 0 28 34">
					                <path d="M-3.34344e-05 4.70897H8.83308V7.174H7.1897V21.1426H10.6134V2.72321H8.83308V0.121224H18.214V2.65476H16.2283V21.1426H19.7889V7.174H18.214V4.64047H27.0471V7.174H25.0614V23.6761L21.7746 26.8944H16.2967V30.455H18.214V33.8787H8.76463V30.592H10.6819V26.8259H5.20403L1.91726 23.6077V7.174H-3.34344e-05V4.70897Z" fill="currentColor"></path>
					              </svg>
					            </div>
					            <div class="rvt-lockup__body">
					              <span class="rvt-lockup__title">${project.name}</span>
					              <span class="rvt-lockup__subtitle">Version ${project.version}</span>
					            </div>
					          </span>
					        </div>
					      </div>
					    </div>
					  </div>
					</header>
					]]></top>
						<bottom><![CDATA[
					<footer class="rvt-footer-base rvt-footer-base--light">
					  <div class="rvt-container-lg">
					    <div class="rvt-footer-base__inner">
					      <div class="rvt-footer-base__logo">
					        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24">
					          <polygon fill="currentColor" points="15.3 3.19 15.3 5 16.55 5 16.55 15.07 13.9 15.07 13.9 1.81 15.31 1.81 15.31 0 8.72 0 8.72 1.81 10.12 1.81 10.12 15.07 7.45 15.07 7.45 5 8.7 5 8.7 3.19 2.5 3.19 2.5 5 3.9 5 3.9 16.66 6.18 18.98 10.12 18.98 10.12 21.67 8.72 21.67 8.72 24 15.3 24 15.3 21.67 13.9 21.67 13.9 18.98 17.82 18.98 20.09 16.66 20.09 5 21.5 5 21.5 3.19 15.3 3.19" fill="#231f20"/>
					        </svg>
					      </div>
					      <ul class="rvt-footer-base__list">
					        <li class="rvt-footer-base__item">
					          <a class="rvt-footer-base__link" href="https://www.iu.edu/copyright/index.html">Copyright</a> &#169; {currentYear} <a class="rvt-footer-base__link" href="https://www.iu.edu">Indiana University</a>
					        </li>
					      </ul>
					    </div>
					  </div>
					</footer>
					]]></bottom>
						<resourcesArtifacts>
							<resourcesArtifact>
								<groupId>edu.iu.util</groupId>
								<artifactId>iu-java-docfiles</artifactId>
								<version>${project.version}</version>
							</resourcesArtifact>
						</resourcesArtifacts>
						<additionalOptions>
							<additionalOption>--main-stylesheet</additionalOption>
							<additionalOption>iu-javadoc.css</additionalOption>
							<additionalOption>--add-stylesheet</additionalOption>
							<additionalOption>rivet.min.css</additionalOption>
						</additionalOptions>
						<links>
							<link>https://jakarta.ee/specifications/annotations/3.0/apidocs/</link>
							<link>https://jakarta.ee/specifications/interceptors/2.2/apidocs/</link>
						</links>
						<failOnError>true</failOnError>
						<failOnWarnings>true</failOnWarnings>
						<docfilessubdirs>true</docfilessubdirs>
						<show>package</show>
					</configuration>
					<executions>
						<execution>
							<id>default-javadoc-jar</id>
							<phase>package</phase>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<artifactId>maven-install-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-plugin-plugin</artifactId>
					<version>3.8.1</version>
				</plugin>
				<plugin>
					<artifactId>maven-clean-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<plugin>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>3.1.0</version>
				</plugin>
				<plugin>
					<groupId>org.jacoco</groupId>
					<artifactId>jacoco-maven-plugin</artifactId>
					<version>0.8.10</version>
					<configuration>
						<skip>${skipTests}</skip>
					</configuration>
					<executions>
						<execution>
							<id>coverage-agent</id>
							<goals>
								<goal>prepare-agent</goal>
							</goals>
						</execution>
						<execution>
							<id>coverage-report</id>
							<goals>
								<goal>report</goal>
							</goals>
 							<configuration>
								<excludes>
									<exclude>**/*.jar</exclude>
								</excludes>
							</configuration>
							<phase>verify</phase>	
						</execution>
						<execution>
							<id>coverage-check</id>
							<goals>
								<goal>check</goal>
							</goals>
							<phase>verify</phase>
							<configuration>
								<haltOnFailure>true</haltOnFailure>
								<excludes>
									<exclude>**/*.jar</exclude>
								</excludes>
								<rules>
									<rule>
										<element>BUNDLE</element>
										<limits>
											<limit>
												<counter>INSTRUCTION</counter>
												<value>COVEREDRATIO</value>
												<minimum>1.000</minimum>
											</limit>
											<limit>
												<counter>CLASS</counter>
												<value>MISSEDCOUNT</value>
												<maximum>0</maximum>
											</limit>
										</limits>
									</rule>
								</rules>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-enforcer-plugin</artifactId>
										<versionRange>[0,)</versionRange>
										<goals>
											<goal>enforce</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-dependency-plugin</artifactId>
										<versionRange>[0,)</versionRange>
										<goals>
											<goal>copy</goal>
											<goal>copy-dependencies</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-javadoc-plugin</artifactId>
										<versionRange>[0,)</versionRange>
										<goals>
											<goal>javadoc</goal>
											<goal>aggregate</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-war-plugin</artifactId>
										<versionRange>[0,)</versionRange>
										<goals>
											<goal>war</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.apache.maven.plugins</groupId>
										<artifactId>maven-war-plugin</artifactId>
										<versionRange>[0,)</versionRange>
										<goals>
											<goal>exploded</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<ignore />
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>

	<profiles>
		<profile>
			<id>default</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<modules>
				<module>docfiles</module>
				<module>base</module>
				<module>client</module>
				<module>test</module>
				<module>crypt</module>
				<module>jdbc</module>
				<module>type</module>
				<module>auth</module>
				<module>site</module>
			</modules>
		</profile>
		<profile>
			<id>scan</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<modules>
				<module>scan</module>
			</modules>
		</profile>
	</profiles>

	<modules>
		<module>iu-java-el</module>
	</modules>
</project>
